--- a/android/app/src/main/res/layout/activity_firm_info.xml
+++ b/android/app/src/main/res/layout/activity_firm_info.xml
@@ -38,7 +38,7 @@
             android:layout_gravity="center"
             android:layout_margin="12dp"
             android:gravity="center"
-            android:text="Firma Bilgileri"
+            android:text="Firma Bilgisi Ve Çalışma Alanı"
             android:textColor="#FFFFFF"
             android:textSize="15sp"
             android:textStyle="bold" />
@@ -83,9 +83,9 @@
                     android:layout_width="360dp"
                     android:layout_height="54dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="7dp"
                     android:background="@drawable/edittext_bg"
-                    android:hint="Firma Bilgisi"
+                    android:hint="Firma Adı"
                     android:inputType="text"
                     android:padding="12dp"
                     android:textColor="#000000"
@@ -100,9 +100,9 @@
                     android:layout_width="360dp"
                     android:layout_height="54dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="7dp"
                     android:background="@drawable/edittext_bg"
-                    android:hint="Firma Çalışma Alanları"
+                    android:hint="Firma Çalışma Alanı"
                     android:inputType="text"
                     android:padding="12dp"
                     android:textColor="#000000"
@@ -117,7 +117,7 @@
                     android:layout_width="360dp"
                     android:layout_height="55dp"
                     android:layout_gravity="center"
-                    android:layout_marginVertical="20dp"
+                    android:layout_marginVertical="7dp"
                     android:backgroundTint="#1A9AAF"
                     android:elevation="8dp"
                     android:fontFamily="monospace"
