--- a/android/app/src/main/res/layout/activity_previous_consultancies.xml
+++ b/android/app/src/main/res/layout/activity_previous_consultancies.xml
@@ -84,7 +84,7 @@
                     android:id="@+id/textPreviousConsultancies"
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginVertical="10dp"
+                    android:layout_marginVertical="5dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="169dp"
                     android:text="Daha Önceki Danışmanlıklar"
@@ -94,6 +94,21 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+
+                <TextView
+                    android:id="@+id/warning"
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="169dp"
+                    android:text="Lütfen verileri tek bir şekilde girip ekle butonuna basınız!"
+                    android:textColor="#8A8585"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/materialCardView" />
+
 
                 <EditText
                     android:id="@+id/previousConsultancyOfArea"
@@ -106,9 +121,7 @@
                     android:textColor="#000000"
                     android:textSize="16sp"
                     android:inputType="textMultiLine"
-                    android:gravity="start|top"
-                    android:hint="Daha Önceki Danışmanlık konularınızı giriniz"
-                    android:textColorHint="#999999"/>
+                    android:gravity="start|top" />
 
 
                 <Button
