--- a/android/app/src/main/res/layout/fragment_firm_info.xml
+++ b/android/app/src/main/res/layout/fragment_firm_info.xml
@@ -137,7 +137,8 @@
                     android:layout_marginVertical="10dp"
                     android:text="Firma Bilgilerim"
                     android:textColor="#000000"
-                    android:textSize="17sp" />
+                    android:textSize="16sp"
+                    android:textStyle="bold"/>
 
                 <LinearLayout
                     android:id="@+id/firmContainer"
@@ -149,7 +150,7 @@
                         android:id="@+id/txtNoFirm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="16sp"
+                        android:textSize="15sp"
                         android:textColor="#626161"
                         android:text="📭 Henüz hiç firma bilgisi eklenmemiş"/>
 
