--- a/android/app/src/main/res/layout/fragment_personal_info.xml
+++ b/android/app/src/main/res/layout/fragment_personal_info.xml
@@ -60,11 +60,12 @@
             android:orientation="vertical"
             android:paddingTop="16dp"
             android:paddingBottom="32dp">
-            <!--Main-->
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginBottom="100dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
