--- a/android/app/src/main/res/layout/fragment_previous_educations.xml
+++ b/android/app/src/main/res/layout/fragment_previous_educations.xml
@@ -164,7 +164,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="15dp"
-                        android:text="📭 Henüz hiç daha önce verilen eğitimler eklenmemiş"
+                        android:text="📭 Henüz daha önce verilen eğitimler eklenmemiş"
                         android:textColor="#626161"
                         android:textSize="15sp" />
 
